@@ -36,18 +36,19 @@ namespace GREATClient
 	/// </summary>
 	public class Game1 : Game
 	{
+		/// The screen dimensions
 		const int SCREEN_W = 800;
 		const int SCREEN_H = 600;
-
-		const float INTERPOLATION_LERP_FACTOR = 0.1f;
 
 		Client client;
 
 		Texture2D player;
+		Texture2D player_run;
 
 		GraphicsDeviceManager graphics;
 		SpriteBatch spriteBatch;
 
+		Dictionary<int, int> PlayerCurrentFrame = new Dictionary<int, int>();
 		Dictionary<int, Vec2> PlayerCurrentPositions = null;
 
 		public Game1()
@@ -86,7 +87,9 @@ namespace GREATClient
 			// Create a new SpriteBatch, which can be used to draw textures.
 			spriteBatch = new SpriteBatch(GraphicsDevice);
 
+			//TODO: put in character resources class and initialize here
 			player = Content.Load<Texture2D>("stand");
+			player_run = Content.Load<Texture2D>("run");
 		}
 
 		/// <summary>
@@ -103,12 +106,33 @@ namespace GREATClient
 
 			CheckInput();
 
-
 			InterpolatePositions();
 
-
 			client.Update();
+
+			AnimatePlayers();
 			base.Update(gameTime);
+		}
+
+		/// <summary>
+		/// Animates the players.
+		/// </summary>
+		void AnimatePlayers()
+		{
+			if (client.Players != null) {
+				foreach (Player p in client.Players.Values) {
+					if (!PlayerCurrentFrame.ContainsKey(p.Id)) // first time we meet the player
+						PlayerCurrentFrame.Add(p.Id, 0); // start at frame 0
+					else {
+						++PlayerCurrentFrame[p.Id]; // we add one frame to our count
+
+						PlayerCurrentFrame[p.Id] = 
+							(PlayerCurrentFrame[p.Id]) % // take our total frame count
+								(GetFrameCount((PlayerAnimation)p.Animation) * GetFrameRate((PlayerAnimation)p.Animation));
+						// and see if we should go back to frame #1.
+					}
+				}
+			}
 		}
 
 		/// <summary>
@@ -133,6 +157,8 @@ namespace GREATClient
 		/// </summary>
 		void InterpolatePositions()
 		{
+			const float INTERPOLATION_LERP_FACTOR = 0.06f;
+
 			if (client.Players != null) { // we *do* have players to show
 				// Never received positions so far, just pick the client's
 				if (PlayerCurrentPositions == null) {
@@ -171,14 +197,84 @@ namespace GREATClient
 					// Take the interpolated position if we have one, the real one if we don't.
 					Vec2 pos = PlayerCurrentPositions != null && PlayerCurrentPositions.ContainsKey(p.Id) ?
 						PlayerCurrentPositions[p.Id] : p.Position;
+					PlayerAnimation anim = (PlayerAnimation)p.Animation;
 
-					spriteBatch.Draw(player, pos.ToVector2(), Color.White);
+					spriteBatch.Draw(GetTexture(anim), pos.ToVector2(), 
+					                 GetSourceRectangle(p), Color.White, 0f, 
+					                 new Vector2(GetFrameWidth(anim)/2f, GetFrameHeight(anim)), // place origin at the feet
+					                 Vector2.One, 
+					                 p.FacingLeft ? SpriteEffects.FlipHorizontally : SpriteEffects.None, 0);
 				}
 			}
 
 			spriteBatch.End();
 
 			base.Draw(gameTime);
+		}
+
+		private Texture2D GetTexture(PlayerAnimation anim)
+		{
+			//TODO: put in a character resources object
+			switch (anim) {
+				case PlayerAnimation.Standing:
+					return player;
+				case PlayerAnimation.Running:
+					return player_run;
+				default: throw new NotImplementedException("Animation not implemented while getting texture.");
+			}
+		}
+
+		private Rectangle GetSourceRectangle(Player p)
+		{
+			if (!PlayerCurrentFrame.ContainsKey(p.Id))
+				PlayerCurrentFrame.Add(p.Id, 0);
+
+			PlayerAnimation anim = (PlayerAnimation)p.Animation;
+
+			//TODO: put in a character resources object
+			return new Rectangle(PlayerCurrentFrame[p.Id] / GetFrameRate(anim) * GetFrameWidth(anim),
+			                     0,
+			                     GetFrameWidth(anim), 
+			                     GetFrameHeight(anim));
+
+		}
+
+		private int GetFrameWidth(PlayerAnimation anim)
+		{
+			//TODO: put in a character resources object
+			return GetTexture(anim).Width / GetFrameCount(anim);
+		}
+
+		private int GetFrameHeight(PlayerAnimation anim)
+		{
+			//TODO: put in a character resources object
+			return GetTexture(anim).Height;
+		}
+
+		private int GetFrameCount(PlayerAnimation anim)
+		{
+			//TODO: put in a character resources object
+			switch (anim) {
+				case PlayerAnimation.Standing:
+					return 1;
+				case PlayerAnimation.Running:
+					return 6;
+				default:
+					throw new NotImplementedException("Animation not implemented while getting frame count.");
+			}
+		}
+
+		private int GetFrameRate(PlayerAnimation anim)
+		{
+			//TODO: put in a character resources object
+			switch (anim) {
+				case PlayerAnimation.Standing:
+					return 1;
+				case PlayerAnimation.Running:
+					return 3;
+				default:
+					throw new NotImplementedException("Animation not implemented while getting frame framerate.");
+			}
 		}
 
 		/// <summary>
