@@ -1,3 +1,10 @@
+2013-03-19  Jesse  <${AuthorEmail}>
+
+	* Player.cs:
+	* Physics.cs:
+	* GREATLib.csproj:
+	* PlayerAnimation.cs: 
+
 2013-03-18  Jesse  <${AuthorEmail}>
 
 	* Vec2.cs: 
